adding a class `nocuetime` for panels
Panels should have possibility to not show time for points #106
Add a tag attribute to inject annotations #66

--- a/examples/API_insert_annotations.html
+++ b/examples/API_insert_annotations.html
@@ -59,7 +59,7 @@ document.addEventListener('CPU_ready', e => {
         'Parameters',
         {
             track   : false,        // Do not show on the timeline
-            panel   : true,         // Create a panel
+            panel   : 'nocuetime',  // I want a panel with a classname hiding the points' times
     });
 
     // I need this, it's for a magick trick 
