forgot to mention

--- a/examples/Style_backgrounds.html
+++ b/examples/Style_backgrounds.html
@@ -70,7 +70,7 @@ You can also use a background image. But you should also provide a solid color t
 
     </style>
 <cpu-audio 
-    title="Semi-transparent background">
+    title="Background with an image">
     <audio controls id="sound">
         <source src="../tests-assets/blank.mp3" type="audio/mpeg" />
     </audio>
