--- a/live_chapters.html
+++ b/live_chapters.html
@@ -1,8 +1,8 @@
 <!--
 
 TODO
+- draggable cursor . some primitive "nearly" ready for release
 - regression cpu controller => player
-- draggable cursor . Continue https://www.kirupa.com/html5/drag.htm . 
 - click on the timeline to create a point
 - export .csv 
 -->
