--- a/src/template.html
+++ b/src/template.html
@@ -2,9 +2,11 @@
 	<main>
 		<img id="poster" class="nosmall" src="" alt="" loading="lazy" decoding="async" />
 		<section id="pageerror" role="alert">
+			<!-- Here are inserted messages from cpu-audio.CPU.update_error(). Perhaps we should hide them at some sizes -->
 		</section>
 		<section id="pagemain">
 			<button type="button" id="control" tabindex="0">
+				<!-- play / pause / loading -->
 				<svg id="loading" aria-label="${__.loading}" viewBox="0 0 32 32" aria-hidden="true">
 					<circle cx="6" cy="22" r="4" />
 					<circle cx="16" cy="22" r="4" />
@@ -23,10 +25,11 @@
 			</button>
 			<div id="about">
 				<div id="titleline">
-					<h5 id="title"><a href="#" id="canonical" aria-label="${__.canonical}"></a></h5>
-					<a id="elapse" aria-label="${__.moment}" tabindex="-1">…</a>
+					<h5 id="title"><a href="#" id="canonical" aria-label="${__.canonical}"><!-- title of the song --></a></h5>
+					<a id="elapse" aria-label="${__.moment}" tabindex="-1">…<!-- elapsed time/total time --></a>
 				</div>
 				<div id="handheld-nav">
+					<!-- this navigation panel appears when you press for more than 400ms on the timeline. It helps to have a fine position on smartphones -->
 					<button type="button" id="restart">
 						<svg viewBox="0 0 24 16" aria-hidden="true">
 							<polygon points="4,0 8,0 8,16 4,16"/>
@@ -63,11 +66,13 @@
 				</div>
 				<div id="line">
 					<div id="time">
+						<!-- time progression bar -->
 						<div id="loadingline" role="progressbar"></div>
 						<time id="popup">--:--</time>
 					</div>
+					<!-- there are inserted tracks for _chapters, cursors -->
 				</div>
-				<!-- div id="infoline" class="nosmallest"></div -->
+				<!-- div id="infoline" class="nosmallest"> -- here, a probable regret, i'll remove it, with flash messages -- </div -->
 			</div>
 			<button id="actions" aria-label="${__.more}" title="${__.more}">
 				<svg viewBox="0 0 32 32" aria-hidden="true">
@@ -79,11 +84,13 @@
 		</section>
 		<section id="pageshare">
 			<a href="#" target="social" id="nativeshare" aria-label="${__.share}" title="${__.share}">
+				<!-- displayed if navigator.share() is available -->
 				<svg viewBox="0 0 32 32" aria-hidden="true">
 					<path d="M 21 0 C 18.2 0 16 2.2 16 5 C 16 5.1 16 5.2 16.0 5.2 L 8.2 9.2 C 7.3 8.4 6.2 8 5 8 C 2.2 8 0 10.2 0 13 C 0 15.8 2.2 18 5 18 C 6.2 18 7.3 17.5 8.2 16.8 L 16 20.8 C 16.0 20.8 16 20.9 16 21 C 16 23.8 18.2 26 21 26 C 23.8 26 26 23.8 26 21 C 26 18.2 23.8 16 21 16 C 19.8 16 18.7 16.4 17.8 17.2 L 10 13.3 C 10 13.2 10 13.1 10 13 C 10 12.9 10 12.8 10 12.8 L 17.8 8.8 C 18.7 9.6 19.8 10 21 10 C 23.8 10 26 7.8 26 5 C 26 2.2 23.8 0 21 0 Z"></path>
 				</svg>
 				<span class="nosmall">${__.share}</span>
 			</a>
+			<!-- if navigator.share() is not available, twitter, facebook and e-mail buttons are displayed instead -->
 			<a href="#" target="social" id="twitter" class="nonativeshare" aria-label="${__.twitter}" title="${__.twitter}">
 				<svg viewBox="0 0 32 32" aria-hidden="true">
 					<path d="M 25.9,9.9 C 25.2,10.2 24.4,10.4 23.6,10.5 24.5,10 25.1,9.2 25.4,8.2 24.6,8.8 23.8,9.1 22.9,9.3 22.1,8.5 21.1,8 19.9,8 c -2.2,0 -4,1.8 -4,4 0,0 0,0.6 0.1,0.9 -3.3,-0.2 -6.3,-1.8 -8.3,-4.2 -0.3,0.6 -0.5,1.3 -0.5,2 0,1.4 0.7,2.6 1.8,3.4 -0.7,0 -1.3,-0.2 -1.8,-0.5 0,0 0,0 0,0.1 0,2 1.4,3.6 3.2,4 -0.3,0.1 -0.7,0.1 -1.1,0.1 -0.3,0 -0.5,0 -0.8,-0.1 0.5,1.6 2,2.8 3.7,2.8 -1.4,1.1 -3.1,1.7 -5,1.7 -0.3,0 -0.6,0 -1,-0.1 1.8,1.1 3.9,1.8 6.1,1.8 7.4,0 11.4,-6.1 11.4,-11.4 0,-0.2 0,-0.3 0,-0.5 0.8,-0.6 1.4,-1.3 2,-2.1 z" />
@@ -103,6 +110,7 @@
 				<span class="nosmall">${__.e_mail}</span>
 			</a>
 			<a href="#" target="social" download="" id="link" aria-label="${__.download}" title="${__.download}">
+				<!-- download source. you can precise which one is to be downloaded, seek for “data-downloadable” in documentation -->
 				<svg viewBox="0 0 32 32" aria-hidden="true">
 					<path d="M 6,6 26,6 16,26 z" />
 					<rect x="6" y="22" width="20" height="4" />
@@ -119,5 +127,6 @@
 		</section>
 	</main>
 	<nav id="playlist" class="panel">
+		<!-- This element is only used by cpu-controller to generate the playlist panel. See issue #109 -->
 	</nav>
 </div>
