--- a/tests/tests-browser.html
+++ b/tests/tests-browser.html
@@ -4,7 +4,10 @@
 	<meta charset="utf-8">
 	<title>cpu-audio tests browser</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="./qunit.css">
+	<link rel="stylesheet" href="../node_modules/qunit/qunit/qunit.css">
+	<style>
+		#qunit {position : relative !important ;}
+	</style>
 </head>
 <body>
 
@@ -31,9 +34,7 @@
 
 	<div id="qunit"></div>
 	<div id="qunit-fixture"></div>
-	<script src="./qunit.js"></script>
+	<script src="../node_modules/qunit/qunit/qunit.js"></script>
 	<script src="./tests-browser.js"></script>
-
-
 </body>
 </html>
