Add tests in examples index

--- a/examples.html
+++ b/examples.html
@@ -4,6 +4,12 @@
 <li><a href='examples/iframe_for_dimension.html'>examples/iframe_for_dimension.html</a></li>
 <li><a href='examples/Style_backgrounds.html'>examples/Style_backgrounds.html</a></li>
 <li><a href='examples/Style_highlight_page_chapters.html'>examples/Style_highlight_page_chapters.html</a></li>
-</ul><h2>Applcations</h2><ul>
+</ul><h2>Applications</h2><ul>
 <li><a href='applications/chapters_editor.html'>applications/chapters_editor.html</a></li>
+</ul>
+</ul><h2>Tests</h2><ul>
+<li><a href='tests/tests-api.html'>tests/tests-api.html</a></li>
+<li><a href='tests/tests-browser.html'>tests/tests-browser.html</a></li>
+<li><a href='tests/tests-interface.html'>tests/tests-interface.html</a></li>
+<li><a href='tests/tests-minimal.html'>tests/tests-minimal.html</a></li>
 </ul>
