Some indication about file:/// limitations due to CSP/CORS

--- a/examples/controller_playlist_and_chapters.html
+++ b/examples/controller_playlist_and_chapters.html
@@ -9,7 +9,7 @@
 </p>
 
 <p>Note : this demo will work best via a webserver, as chapters won't be loaded in a file:/// context</p>
-<p>Example shows taken from <a href="https://cpu.dascritch.net/serie/Radio%20num%C3%A9rique">my series about DAB+</a></p>
+<p>Example shows taken from <a href="https://cpu.dascritch.net/serie/Radio%20num%C3%A9rique">my radio series about DAB+</a></p>
 
 <cpu-controller></cpu-controller>
 
