Usung planes&points on CPU-Controller for playlist
Create panels and points on CPU-Controller #109

--- a/examples/controller_playlist_and_chapters.html
+++ b/examples/controller_playlist_and_chapters.html
@@ -5,7 +5,7 @@
 	<script src="../dist/cpu-audio.js"></script>
 
 <p>
-	Heere is a cpu-controller in a playlist context (each sound when finished is launching the next one) with chapters (when you change of sound, its chapters' track and panel are displayer in controller). We hide panels in the players for ease to read.
+	Here is a cpu-controller in a playlist context (each sound when finished is launching the next one) with chapters (when you change of sound, its chapters' track and panel are displayer in controller). We hide panels in the players for ease to read.
 </p>
 
 <p>Note : this demo will work best via a webserver, as chapters won't be loaded in a file:/// context</p>
@@ -54,6 +54,9 @@
         <track kind="chapters" src="../tests-assets/0143-CPU%2824-09-20%29.vtt" default>
 	</audio>
 </cpu-audio>
+
+<hr />
+<p>TODO : add another playlist</p>
 
 
 </html>
