--- a/examples/controller_playlist_and_chapters.html
+++ b/examples/controller_playlist_and_chapters.html
@@ -4,6 +4,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<script src="../dist/cpu-audio.js"></script>
 
+	<style>
+		main {display : flex;   flex-direction:row; }
+		.halfs {flex : 49%; margin: 1em;}
+	</style>
+
+<main>
+
+<div class="halfs">
 <p>
 	Here is a cpu-controller in a playlist context (each sound when finished is launching the next one) with chapters (when you change of sound, its chapters' track and panel are displayer in controller). We hide panels in the players for ease to read.
 </p>
@@ -14,11 +22,15 @@
 <cpu-controller></cpu-controller>
 
 <hr />
+</div>
+
+<div class="halfs">
 
 <cpu-audio
+	playlist="cpu"
 	title="Ex0117 À la source du son"
 	poster="https://cpu.dascritch.net/public/Images/Emissions/.1910-Ex0117-SourceDuSon_s.jpg"
-	canonical="https://cpu.dascritch.net/post/2019/10/17/Ex0117-%C3%80-la-source-du-son" playlist="cpu" hide="panels">
+	canonical="https://cpu.dascritch.net/post/2019/10/17/Ex0117-%C3%80-la-source-du-son" hide="panels">
 	<audio controls id="ep1">
 		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0117-CPU%2817-10-19%29.mp3" type="audio/mpeg" />
         <track kind="chapters" src="../tests-assets/0117-CPU%2817-10-19%29.vtt" default>
@@ -26,9 +38,11 @@
 </cpu-audio>
 
 <cpu-audio
+	playlist="cpu"
 	title="Ex0136 Traitements du son"
 	poster="https://cpu.dascritch.net/public/Images/Emissions/.2004-Ex0136-TraitementsDeSon_s.jpg"
-	canonical="https://cpu.dascritch.net/post/2020/04/30/Ex0136-Traitements-du-son" playlist="cpu" hide="panels">
+	canonical="https://cpu.dascritch.net/post/2020/04/30/Ex0136-Traitements-du-son"
+	hide="panels">
 	<audio controls id="ep2">
 		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0136-CPU%2830-04-20%29.mp3" type="audio/mpeg" />
         <track kind="chapters" src="../tests-assets/0136-CPU%2830-04-20%29.vtt" default>
@@ -36,9 +50,11 @@
 </cpu-audio>
 
 <cpu-audio
+	playlist="cpu"
 	title="Ex0137 Ingénieur du son"
 	poster="https://cpu.dascritch.net/public/Images/Emissions/.2005-Ex0137-IngenieurDuSon_s.jpg"
-	canonical="https://cpu.dascritch.net/post/2020/05/14/Ex0137-Ing%C3%A9nieur-du-son" playlist="cpu" hide="panels">
+	canonical="https://cpu.dascritch.net/post/2020/05/14/Ex0137-Ing%C3%A9nieur-du-son"
+	hide="panels">
 	<audio controls id="ep3">
 		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0137-CPU%2814-05-20%29.mp3" type="audio/mpeg" />
         <track kind="chapters" src="../tests-assets/0137-CPU%2814-05-20%29.vtt" default>
@@ -46,9 +62,11 @@
 </cpu-audio>
 
 <cpu-audio
+	playlist="cpu"
 	title="Ex0143 Le son laser"
 	poster="https://cpu.dascritch.net/public/Images/Chroniques/.2009-Ex0143-CD_s.jpg"
-	canonical="https://cpu.dascritch.net/post/2020/09/24/Ex0143-Le-son-laser" playlist="cpu" hide="panels">
+	canonical="https://cpu.dascritch.net/post/2020/09/24/Ex0143-Le-son-laser"
+	hide="panels">
 	<audio controls id="ep4">
 		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0143-CPU%2824-09-20%29.mp3" type="audio/mpeg" />
         <track kind="chapters" src="../tests-assets/0143-CPU%2824-09-20%29.vtt" default>
@@ -56,7 +74,35 @@
 </cpu-audio>
 
 <hr />
-<p>TODO : add another playlist</p>
+<p>Another playlist. The controller should change its playlist panel</p>
 
-
+<cpu-audio 
+    playlist="hallu"
+    title="micro @HalluFMR #36 : Placebo"
+    poster="https://dascritch.net/vrac/.blog2/radio/.1409-Hallucinarium-FMR_s.jpg"
+    canonical="https://dascritch.net/post/2015/05/27/micro-%40HalluFMR-36-%3A-Placebo">
+    <audio controls id="pl1">
+        <source src="https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/36-AtHalluFMR%2827-05-15%29.mp3" type="audio/mpeg">
+    </audio>
+</cpu-audio>
+<cpu-audio
+    playlist="hallu"
+    title="micro @HalluFMR #38 : Sensationnel"
+    poster="https://dascritch.net/vrac/.blog2/radio/1411-AtHalluFmr/.1505-PassageF3_m.jpg"
+    canonical="https://dascritch.net/post/2015/06/10/micro-%40HalluFMR-38-%3A-Sensationnel">
+    <audio controls id="pl2">
+        <source src="http://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/38-AtHalluFMR(10-06-15).mp3" type="audio/mpeg">
+    </audio>
+</cpu-audio>
+<cpu-audio
+    playlist="hallu"
+    title="micro @HalluFMR #40 : Conditions Générales"
+    poster="https://dascritch.net/vrac/.blog2/radio/.1409-Hallucinarium-FMR_s.jpg"
+    canonical="https://dascritch.net/post/2015/06/24/micro-%40HalluFMR-40-%3A-Conditions-G%C3%A9n%C3%A9rales">
+    <audio controls id="pl3">
+        <source src="http://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/40-AtHalluFMR(24-06-15).mp3" type="audio/mpeg">
+    </audio>
+</cpu-audio>
+</div>
+</main>
 </html>
