remove_point was not properly executed
Create panels and points on CPU-Controller #109

--- a/examples/controller_playlist_and_chapters.html
+++ b/examples/controller_playlist_and_chapters.html
@@ -31,7 +31,7 @@
 	title="Ex0117 À la source du son"
 	poster="https://cpu.dascritch.net/public/Images/Emissions/.1910-Ex0117-SourceDuSon_s.jpg"
 	canonical="https://cpu.dascritch.net/post/2019/10/17/Ex0117-%C3%80-la-source-du-son" hide="panels">
-	<audio controls id="ep1">
+	<audio controls id="ep1" preload="none">
 		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0117-CPU%2817-10-19%29.mp3" type="audio/mpeg" />
         <track kind="chapters" src="../tests-assets/0117-CPU%2817-10-19%29.vtt" default>
 	</audio>
@@ -43,7 +43,7 @@
 	poster="https://cpu.dascritch.net/public/Images/Emissions/.2004-Ex0136-TraitementsDeSon_s.jpg"
 	canonical="https://cpu.dascritch.net/post/2020/04/30/Ex0136-Traitements-du-son"
 	hide="panels">
-	<audio controls id="ep2">
+	<audio controls id="ep2" preload="none">
 		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0136-CPU%2830-04-20%29.mp3" type="audio/mpeg" />
         <track kind="chapters" src="../tests-assets/0136-CPU%2830-04-20%29.vtt" default>
 	</audio>
@@ -55,7 +55,7 @@
 	poster="https://cpu.dascritch.net/public/Images/Emissions/.2005-Ex0137-IngenieurDuSon_s.jpg"
 	canonical="https://cpu.dascritch.net/post/2020/05/14/Ex0137-Ing%C3%A9nieur-du-son"
 	hide="panels">
-	<audio controls id="ep3">
+	<audio controls id="ep3" preload="none">
 		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0137-CPU%2814-05-20%29.mp3" type="audio/mpeg" />
         <track kind="chapters" src="../tests-assets/0137-CPU%2814-05-20%29.vtt" default>
 	</audio>
@@ -67,7 +67,7 @@
 	poster="https://cpu.dascritch.net/public/Images/Chroniques/.2009-Ex0143-CD_s.jpg"
 	canonical="https://cpu.dascritch.net/post/2020/09/24/Ex0143-Le-son-laser"
 	hide="panels">
-	<audio controls id="ep4">
+	<audio controls id="ep4" preload="none">
 		<source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0143-CPU%2824-09-20%29.mp3" type="audio/mpeg" />
         <track kind="chapters" src="../tests-assets/0143-CPU%2824-09-20%29.vtt" default>
 	</audio>
@@ -81,7 +81,7 @@
     title="micro @HalluFMR #36 : Placebo"
     poster="https://dascritch.net/vrac/.blog2/radio/.1409-Hallucinarium-FMR_s.jpg"
     canonical="https://dascritch.net/post/2015/05/27/micro-%40HalluFMR-36-%3A-Placebo">
-    <audio controls id="pl1">
+    <audio controls id="pl1" preload="none">
         <source src="https://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/36-AtHalluFMR%2827-05-15%29.mp3" type="audio/mpeg">
     </audio>
 </cpu-audio>
@@ -90,7 +90,7 @@
     title="micro @HalluFMR #38 : Sensationnel"
     poster="https://dascritch.net/vrac/.blog2/radio/1411-AtHalluFmr/.1505-PassageF3_m.jpg"
     canonical="https://dascritch.net/post/2015/06/10/micro-%40HalluFMR-38-%3A-Sensationnel">
-    <audio controls id="pl2">
+    <audio controls id="pl2" preload="none">
         <source src="http://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/38-AtHalluFMR(10-06-15).mp3" type="audio/mpeg">
     </audio>
 </cpu-audio>
@@ -99,7 +99,7 @@
     title="micro @HalluFMR #40 : Conditions Générales"
     poster="https://dascritch.net/vrac/.blog2/radio/.1409-Hallucinarium-FMR_s.jpg"
     canonical="https://dascritch.net/post/2015/06/24/micro-%40HalluFMR-40-%3A-Conditions-G%C3%A9n%C3%A9rales">
-    <audio controls id="pl3">
+    <audio controls id="pl3" preload="none">
         <source src="http://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/40-AtHalluFMR(24-06-15).mp3" type="audio/mpeg">
     </audio>
 </cpu-audio>
