--- a/examples/API_insert_annotations.html
+++ b/examples/API_insert_annotations.html
@@ -29,7 +29,7 @@ document.addEventListener('CPU_ready', e => {
     	0,							// time position, in seconds
     	'note-1',					// named reference for the point
     	{  
-            'text' : '“Enjoy the silence” is the name of a song of Depeche Mode',
+            'text' : '“Enjoy the silence” is the name of a song of Depeche Mode [on click, should go to the time position]',
             'link' : true,			// on click, should go to the time position
            	'end'  : 20				// The point ends at 20 seconds 
     	});
@@ -39,7 +39,7 @@ document.addEventListener('CPU_ready', e => {
     	15,							// you can overleap points
     	'note-2',					// named reference for the point
     	{  
-            'text' : 'As this song is copyrighted, we used another one',
+            'text' : 'As this song is copyrighted, we used another one [no action on click]',
             'link' : false,			// no action on click
            	'end'  : 40
     	});
@@ -49,7 +49,7 @@ document.addEventListener('CPU_ready', e => {
     	40,
     	'note-3',					// remember, those names should be unique
     	{  
-            'text' : 'an excerpt of “<em>4:33</em>” which is <em>also</em> copyrighted! See link for details!', // remember that only a subset of tags may work here
+            'text' : 'an excerpt of “<em>4:33</em>” which is <em>also</em> copyrighted! See link for details! [If link is a string, the url is targeted by your point]', // remember that only a subset of tags may work here
             'link' : 'https://www.classicalmpr.org/blog/classical-notes/2015/12/02/can-silence-be-copyrighted',	// If link is a string, the url is targeted by your point
     	});
 
@@ -59,7 +59,7 @@ document.addEventListener('CPU_ready', e => {
         'Parameters',
         {
             track   : false,        // Do not show on the timeline
-            panel   : 'nocuetime',  // I want a panel with a classname hiding the points' times
+            panel   : 'nocuetime',  // I want a panel with a classname hiding the points times
     });
 
     // I need this, it's for a magick trick 
