Missing a case in example, test to remove panel header

--- a/examples/controller_playlist_and_chapters.html
+++ b/examples/controller_playlist_and_chapters.html
@@ -103,6 +103,16 @@
         <source src="http://dascritch.net/vrac/Emissions/AtHalluFMR/podcast/40-AtHalluFMR(24-06-15).mp3" type="audio/mpeg">
     </audio>
 </cpu-audio>
+
+<hr />
+<p>Alone, no playlist</p>
+
+<cpu-audio
+    title="no playlist">
+    <audio controls id="no" preload="none">
+        <source src="../tests-assets/blank.mp3" type="audio/mpeg">
+    </audio>
+</cpu-audio>
 </div>
 </main>
 </html>
