Moving production files to build/

--- a/examples/API_insert_annotations.html
+++ b/examples/API_insert_annotations.html
@@ -129,7 +129,7 @@ document.addEventListener('CPU_ready', e => {
 });
 
 </script>
-<script src="../dist/cpu-audio.js" async></script>
+<script src="../build/cpu-audio.js" async></script>
 
 <body>
 <cpu-audio 
