--- a/examples/Style_backgrounds.html
+++ b/examples/Style_backgrounds.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8" />
 <title>CPU-Audio API example : styling background</title>
 
-<script src="../dist/cpu-audio.js" async></script>
+<script src="../build/cpu-audio.js" async></script>
 <style>
     div {
         background : #FF7;
