--- a/live_config.html
+++ b/live_config.html
@@ -1,4 +1,4 @@
-<script src="./dist/cpu-audio.js" async></script>
+<script src="./build/cpu-audio.js" async></script>
 <link rel="stylesheet" href="./src/global.css" />
 
 <div id="demo">
