--- a/tests/tests-api.html
+++ b/tests/tests-api.html
@@ -12,7 +12,7 @@
 		// needed to avoid a unwanted hot start
 		window.localStorage.clear();
 	</script>
-	<script src="../dist/cpu-audio.js"></script>
+	<script src="../build/cpu-audio.js"></script>
 </head>
 <body>
 
