--- a/tests/tests-interface.html
+++ b/tests/tests-interface.html
@@ -13,7 +13,7 @@
 		window.localStorage.clear();
 	</script>
 
-	<script src="../dist/cpu-audio.js"></script>
+	<script src="../build/cpu-audio.js"></script>
 </head>
 <body>
 
