--- a/examples/Style_highlight_page_chapters.html
+++ b/examples/Style_highlight_page_chapters.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <title>CPU-Audio API example : Highlight page chapters</title>
 
-    <script src="../dist/cpu-audio.js" async></script>
+    <script src="../build/cpu-audio.js" async></script>
     <style>
         /* 
             For each reached chapter, declare which chapters must be hightlighted.
