--- a/examples/controller_playlist_and_chapters.html
+++ b/examples/controller_playlist_and_chapters.html
@@ -2,7 +2,7 @@
 <html>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<script src="../dist/cpu-audio.js"></script>
+	<script src="../build/cpu-audio.js"></script>
 
 	<style>
 		main {display : flex;   flex-direction:row; }
