--- a/src/themes/default/template.html
+++ b/src/themes/default/template.html
@@ -2,7 +2,7 @@
 	<main>
 		<img id="poster" class="nosmall" src="" alt="" loading="lazy" decoding="async" />
 		<section id="pageerror" role="alert">
-			<!-- Here are inserted messages from cpu-audio.CPU.update_error(). Perhaps we should hide them at some sizes. And also put an ellipsis in css -->
+			<!-- Here are inserted messages from cpu-audio.CPU.updateError(). Perhaps we should hide them at some sizes. And also put an ellipsis in css -->
 		</section>
 		<section id="pagemain">
 			<button type="button" id="control" tabindex="0">
