Changing API methods and parameters
Unify name style from snake_case to camelCase : MAJOR VERSION #112

--- a/examples/API_insert_annotations.html
+++ b/examples/API_insert_annotations.html
@@ -26,9 +26,9 @@ document.addEventListener('CPU_ready', e => {
     // Now, we can insert some points of interest
     player_API.addPoint(
     	'annotations',				// named reference for the plane
-    	0,							// time position, in seconds
     	'note-1',					// named reference for the point
     	{  
+            start   : 0,                          // time position, in seconds
             'text' : '“Enjoy the silence” is the name of a song of Depeche Mode [on click, should go to the time position]',
             'link' : true,			// on click, should go to the time position
            	'end'  : 20				// The point ends at 20 seconds 
@@ -36,9 +36,9 @@ document.addEventListener('CPU_ready', e => {
 
     player_API.addPoint(
     	'annotations',
-    	15,							// you can overleap points
     	'note-2',					// named reference for the point
     	{  
+    	   start : 15,							// you can overleap points
             'text' : 'As this song is copyrighted, we used another one [no action on click]',
             'link' : false,			// no action on click
            	'end'  : 40
@@ -46,9 +46,9 @@ document.addEventListener('CPU_ready', e => {
 
     player_API.addPoint(
     	'annotations',
-    	40,
     	'note-3',					// remember, those names should be unique
     	{  
+    	   start : 40,
             'text' : 'an excerpt of “<em>4:33</em>” which is <em>also</em> copyrighted! See link for details! [If link is a string, the url is targeted by your point]', // remember that only a subset of tags may work here
             'link' : 'https://www.classicalmpr.org/blog/classical-notes/2015/12/02/can-silence-be-copyrighted',	// If link is a string, the url is targeted by your point
     	});
@@ -79,11 +79,11 @@ document.addEventListener('CPU_ready', e => {
             return ;
         }
         // we take the point panel in element
-        let element_pointPanel = detail.element_pointPanel;
+        let elementPointPanel = detail.elementPointPanel;
         // I need to prevent any drag events, due to some... we'll i keep the surprise
-        element_pointPanel.draggable = false;
-        element_pointPanel.querySelector('A').draggable = false;
-        let input_element = element_pointPanel.querySelector('input');
+        elementPointPanel.draggable = false;
+        elementPointPanel.querySelector('A').draggable = false;
+        let input_element = elementPointPanel.querySelector('input');
         if (detail.point === 'volume') {
             // don't forget to remove this eventListener before putting it again !
             let action = function(e) {
@@ -107,9 +107,9 @@ document.addEventListener('CPU_ready', e => {
     // Let's have a bit of fun
     player_API.addPoint(
         'parameters',
-        0,
         'volume',
         {  
+            start : 0,
             'text' : 'Volume <input id="input_volume" type="range" value="1" min="0" max="1" step="0.1" />', // Yes, I know what I wrote upper, but... let's play !
             'link' : false
         });
@@ -117,9 +117,9 @@ document.addEventListener('CPU_ready', e => {
     // Let's have a SECOND bit of fun
     player_API.addPoint(
         'parameters',
-        0,
         'playbackrate',
         {  
+            start : 0,
             'text' : 'Speed <input id="input_rate" type="range" value="1" min="0.5" max="2" step="0.5" />',
             'link' : false
         });
