Moving live_config in applications

--- a/applications/live_config.html
+++ b/applications/live_config.html
@@ -1,5 +1,5 @@
-<script src="./build/cpu-audio.js" async></script>
-<link rel="stylesheet" href="./src/global.css" />
+<script src="../build/cpu-audio.js" async></script>
+<link rel="stylesheet" href="../src/global.css" />
 
 <div id="demo">
 <cpu-audio 
