--- a/examples.html
+++ b/examples.html
@@ -6,6 +6,7 @@
 <li><a href='examples/Style_highlight_page_chapters.html'>examples/Style_highlight_page_chapters.html</a></li>
 </ul><h2>Applications</h2><ul>
 <li><a href='applications/chapters_editor.html'>applications/chapters_editor.html</a></li>
+<li><a href='applications/live_config.html'>applications/live_config.html</a></li>
 </ul>
 </ul><h2>Tests</h2><ul>
 <li><a href='tests/tests-api.html'>tests/tests-api.html</a></li>
